@@ -4,6 +4,13 @@ Development Progress	:
 ---------------------------
 
 2012-01-23 (SVN):
+    * gl_main.c: Now that it deviated from the actual gluPerspective(),
+      renamed MYgluPerspective to GL_SetFrustum and changed it to accept
+      only the fovx and fovy parameters. Defined new macros NEARCLIP (4)
+      and FARCLIP (4096) and passed them to glFrustum(). Inspired from
+      fitzquake.
+
+2012-01-23 (SVN):
     * vid_dos.c (VID_Init): Added missing safemode check alongside the
       -stdvid command line argument check.
     * updated beta date stamp to 2012-01-23.
